[project]
name = "pyreporter"
version = "0.1.0"
description = "Some description."
authors = [
    {name = "edgar.treischl",email = "edgar.treischl@isb.bayern.de"}
]
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
